# Robotz213

./: Dockerfile  compose.yml  converter_para_vue.html  env.d.ts  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  vite.config.ts
.github/workflows/: deploy.yml  static.yml
app/: __init__.py  default_config.py  forms.py  handler.py  routes.py
app/misc/: gen_seed.py
app/static/js/: scripts.js
app/templates/: contact.html  projects.html
app/templates/includes/: footer.html  navbar.html
app/templates/includes/resume/: experience.html  skills.html
src/: App.vue  main.ts
src/assets/css/: main.css  main.css.map  main.scss
src/assets/js/: color-modes.js
src/components/: FooterView.vue  HeaderView.vue  NavbarView.vue
src/router/: index.ts
src/store/: navbar.ts
src/views/: AboutmeView.vue  ContactView.vue  MyHabilitiesView.vue  MyProjectsView.vue
src/views/portuguese/: PortugueseView.vue
src/views/portuguese/components/: NavbarView.vue
src/views/portuguese/components/views/: AboutMeView.vue  MyContactsView.vue  MyGraduationView.vue  MyJourneyView.vue  MyMotivationView.vue  MyProjectsView.vue  MyStacksView.vue  TagsView.vue
